Implementing API and building tables

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -787,7 +787,43 @@
     }
    ],
    "source": [
-    "\n",
+    "\r\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?\"\r\n",
+    "units = \"Imperial\"\r\n",
+    "query_url = f\"{url}appid={weather_api_key}&units={units}&q=\"\r\n",
+    "temp=[]\r\n",
+    "humid=[]\r\n",
+    "cloud=[]\r\n",
+    "wind_speed=[]\r\n",
+    "cityFinal=[]\r\n",
+    "country=[]\r\n",
+    "lat=[]\r\n",
+    "long=[]\r\n",
+    "datetime=[]\r\n",
+    "\r\n",
+    "city_id=1\r\n",
+    "#weather part of the API can't get city_final to append\r\n",
+    "for city in cities:\r\n",
+    "    response=requests.get(query_url + city).json()\r\n",
+    "    try:\r\n",
+    "        \r\n",
+    "        cityFinal.append(response['name'])\r\n",
+    "        temp.append(response['main']['temp_max'])\r\n",
+    "        humid.append(response['main']['humidity'])\r\n",
+    "        cloud.append(response['clouds']['all'])\r\n",
+    "        wind_speed.append(response ['wind']['speed'])\r\n",
+    "        country.append(response['sys']['country'])\r\n",
+    "        lat.append(response['coord']['lat'])\r\n",
+    "        long.append(response['coord']['lon'])\r\n",
+    "        datetime.append(response['dt'])\r\n",
+    "        print(f\"Processing record {city_id} for {city}\") \r\n",
+    "        \r\n",
+    "        city_id=city_id+1\r\n",
+    "        #print(\"City found appending stats\")\r\n",
+    "    except (KeyError, IndexError): \r\n",
+    "        print(\"City does not exist in weather API\")\r\n",
+    "    \r\n",
+    "print(f\"Data reading complete\")\r\n",
     "        "
    ]
   },
@@ -825,7 +861,22 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "cities_data=pd.DataFrame({\r\n",
+    "          \"City\" :cityFinal,\r\n",
+    "          \"Country\": country,\r\n",
+    "          \"Latitude\": lat,\r\n",
+    "          \"Longitude\": long,\r\n",
+    "          \"Date Time\": datetime,\r\n",
+    "          \"Temperature\": temp,\r\n",
+    "          \"Humidity (%)\": humid,\r\n",
+    "           \"Cloudiness (%)\": cloud,\r\n",
+    "           \"Wind Speed (mph)\": wind_speed\r\n",
+    "          })\r\n",
+    "cities_data.head()\r\n",
+    "cities_data.to_csv(output_data_file)\r\n",
+    "cities_data.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1127,7 +1178,12 @@
     }
    ],
    "source": [
-    "#  Get the indices of cities that have humidity over 100%.\n"
+    "#  Get the indices of cities that have humidity over 100%.\r\n",
+    "overhumid=[]\r\n",
+    "for x in cities_data[\"Humidity\"]:\r\n",
+    "    if x > 100:\r\n",
+    "        overhumid.append(x)\r\n",
+    "overhumid"
    ]
   },
   {
@@ -1306,7 +1362,15 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "x_axis=cities_data[\"Latitude\"]\r\n",
+    "y_axis=cities_data[\"Temperature\"]\r\n",
+    "plt.scatter(x_axis, y_axis, facecolors=\"blue\", edgecolors=\"black\")\r\n",
+    "plt.xlabel(\"Latitude\")\r\n",
+    "plt.ylabel(\"Temperature (F)\")\r\n",
+    "plt.title(\"Temperature vs Latitude 11/13/2020\")\r\n",
+    "plt.savefig(\"output_data/temp.png\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1333,7 +1397,15 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "x_axis=cities_data[\"Latitude\"]\r\n",
+    "y_axis=cities_data[\"Humidity (%)\"]\r\n",
+    "plt.scatter(x_axis, y_axis, facecolors=\"red\", edgecolors=\"black\")\r\n",
+    "plt.xlabel(\"Latitude\")\r\n",
+    "plt.ylabel(\"Humidity (%)\")\r\n",
+    "plt.title(\"Humidity (%) vs Latitude 11/13/2020\")\r\n",
+    "plt.savefig(\"output_data/humid.png\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1360,7 +1432,16 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "\r\n",
+    "x_axis=cities_data[\"Latitude\"]\r\n",
+    "y_axis=cities_data[\"Cloudiness (%)\"]\r\n",
+    "plt.scatter(x_axis, y_axis, facecolors=\"gray\", edgecolors=\"black\")\r\n",
+    "plt.xlabel(\"Latitude\")\r\n",
+    "plt.ylabel(\"Cloudiness(%)\")\r\n",
+    "plt.title(\"Cloudiness (%) vs Latitude 11/13/2020\")\r\n",
+    "plt.savefig(\"output_data/cloudiness.png\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1387,7 +1468,16 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "\r\n",
+    "x_axis=cities_data[\"Latitude\"]\r\n",
+    "y_axis=cities_data[\"Wind Speed (mph)\"]\r\n",
+    "plt.scatter(x_axis, y_axis, facecolors=\"yellow\", edgecolors=\"black\")\r\n",
+    "plt.xlabel(\"Latitude\")\r\n",
+    "plt.ylabel(\"Wind Speed (mph)\")\r\n",
+    "plt.title(\"Wind Speed (mph) vs Latitude 11/13/2020\")\r\n",
+    "plt.savefig(\"output_data/wind_speed.png\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1402,7 +1492,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# OPTIONAL: Create a function to create Linear Regression plots"
+    "# OPTIONAL: Create a function to create Linear Regression plots\r\n",
+    "northern_cities=cities_data[(cities_data[\"Latitude\"]>0)]\r\n",
+    "southern_cities=cities_data[(cities_data[\"Latitude\"]<0)]\r\n",
+    "\r\n",
+    "def regression(df, x_values, y_values, region):\r\n",
+    "\r\n",
+    "    x=df[x_values]\r\n",
+    "    y=df[y_values]\r\n",
+    "    correlation=st.pearsonr(x, y)\r\n",
+    "    print(correlation)\r\n",
+    "    (slope, intercept, rvalue, pvalue, stderr) = linregress(x, y)\r\n",
+    "    regress_values = x * slope + intercept\r\n",
+    "    plt.xlabel(x_values)\r\n",
+    "    plt.ylabel(y_values)\r\n",
+    "    plt.title(f\"{region} {x_values} vs {y_values} 7/17/2020\")\r\n",
+    "    plt.scatter(x, y)\r\n",
+    "    plt.plot(x, regress_values, \"r-\")\r\n",
+    "    plt.savefig(f\"output_data/{region} {x_values} vs {y_values}\")"
    ]
   },
   {
@@ -1446,7 +1553,9 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "regression(southern_cities, \"Latitude\", \"Temperature\", \"Southern Hemisphere\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1480,7 +1589,9 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "regression(southern_cities, \"Latitude\", \"Temperature\", \"Southern Hemisphere\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1514,7 +1625,9 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "regression(northern_cities, \"Latitude\", \"Humidity (%)\", \"Northern Hemisphere\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1548,7 +1661,9 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "regression(southern_cities, \"Latitude\", \"Humidity (%)\", \"Southern Hemisphere\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1582,7 +1697,9 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "regression(northern_cities, \"Latitude\", \"Cloudiness (%)\", \"Northern Hemisphere\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1616,7 +1733,9 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "regression(southern_cities, \"Latitude\", \"Cloudiness (%)\", \"Southern Hemisphere\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1650,7 +1769,9 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "regression(northern_cities, \"Latitude\", \"Wind Speed (mph)\", \"Northern Hemisphere\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1684,7 +1805,9 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "regression(southern_cities, \"Latitude\", \"Wind Speed (mph)\", \"Southern Hemisphere\")"
+   ]
   },
   {
    "cell_type": "code",
