starting code for Vacation notebook

--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -104,7 +104,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#creating variable hotel_df\r\n",
+    "hotel_df = ideal_city[['City','Country','Latitude','Longitude']].copy()\r\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -141,10 +144,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add marker layer ontop of heat map\n",
-    "\n",
-    "\n",
-    "# Display figure\n"
+    "# Add marker layer ontop of heat map\r\n",
+    "markers = gmaps.marker_layer(locations)\r\n",
+    "\r\n",
+    "# Display figure\r\n",
+    "fig.add_layer(markers)\r\n",
+    "fig"
    ]
   },
   {
