confirming dataframe code works

--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -43,7 +43,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "\r\n",
+    "data_path=\"output_data/cities.csv\"\r\n",
+    "cities=pd.read_csv(data_path)\r\n",
+    "cities"
    ]
   },
   {
