configuring gmap api

--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -64,14 +64,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\r\n",
+    "gmaps.configure(api_key=g_key)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gmaps.configure(api_key=g_key)\r\n",
+    "\r\n",
+    "\r\n",
+    "locations = cities[[\"Latitude\", \"Longitude\"]]\r\n",
+    "humidity = cities[\"Humidity (%)\"]\r\n",
+    "fig = gmaps.figure(zoom_level=1.6, center= (20, 0))\r\n",
+    "\r\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=humidity, \r\n",
+    "                                 dissipating=False, max_intensity=100,\r\n",
+    "                                 point_radius = 1,\r\n",
+    "                                )\r\n",
+    "\r\n",
+    "fig.add_layer(heat_layer)\r\n",
+    "fig"
+   ]
   },
   {
    "cell_type": "markdown",
