--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -105,7 +105,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ideal_city = cities.loc[(cities[\"Temperature\"]<80) & (cities[\"Temperature\"]>75) & (cities[\"Wind Speed (mph)\"]<10)& (cities[\"Cloudiness (%)\"]==0) & (cities[\"Wind Speed (mph)\"]<9)].dropna()\r\n",
+    "ideal_city"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,7 +138,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# geocoordinates\r\n",
+    "target_radius = 5000\r\n",
+    "target_type = \"lodging\"\r\n",
+    "\r\n",
+    "# set up a parameters dictionary\r\n",
+    "params = {\r\n",
+    "    \"radius\": target_radius,\r\n",
+    "    \"type\": target_type,\r\n",
+    "    \"key\": g_key\r\n",
+    "}\r\n",
+    "\r\n",
+    "for index, row in hotel_df.iterrows():\r\n",
+    "    lat = row['Lat']\r\n",
+    "    lng =row['Lng']\r\n",
+    "    params['location'] = f\"{lat},{lng}\"\r\n",
+    "    # base url\r\n",
+    "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\r\n",
+    "\r\n",
+    "    # run a request using our params dictionary\r\n",
+    "    response = requests.get(base_url, params=params).json()\r\n",
+    "    \r\n",
+    "    try:\r\n",
+    "        hotel_df.loc[index, \"Hotel Name\"] = response['results'][0]['name']\r\n",
+    "    except (KeyError, IndexError):\r\n",
+    "        print(f\"no hotel in {index}\")\r\n",
+    "print(hotel_df)\r\n",
+    "hotel_df.to_csv(\"output_data/hotel_data\")"
+   ]
   },
   {
    "cell_type": "code",
